--- a/CSS/index.html
+++ b/CSS/index.html
@@ -50,7 +50,7 @@
     <h1 class="header">Hello h1</h1>
     <h2 id="footer">Hello footer</h2>
     <div class="container">
-      <p class="container-p">Hauleeee</p>
+      <p class="container-p">Paragraph</p>
     </div>
     <p style="color: #000">Hexcode</p>
   </body>
