done besides axios

--- a/CSS/2.html
+++ b/CSS/2.html
@@ -42,6 +42,7 @@
     .container {
       background-image: url(main.png);
       background-repeat: no-repeat;
+      width: 50vw;
       height: 100vh;
       display: flex;
       flex-direction: column;
